syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;
option java_outer_classname = "NumberSequenceStreamingProto";

message NumbersRequestMessage {
    int32 firstValue = 1;
    int32 secondValue = 2;
}

message NumbersResponseMessage {
    int32 value = 1;
}

service RemoteNumbersService {
    rpc getNumbers(NumbersRequestMessage) returns (stream NumbersResponseMessage);
}
